refactor(backend): adopt Java 16-21 idioms across the codebase (Stage 4A)
Mechanical, behaviour-preserving modernization that closes a batch of
Sonar code-smell findings tied to "use the newer language feature."
Every change has a 1:1 equivalent in the older form — no semantics
moved, no behaviour changed. Touch-tested by the relevant unit suites
(98 tests across NewsServiceTest, NotificationServiceTest,
DebtInstrumentServiceTest, PriceAlertServiceTest, etc. — all green).

Stream.collect(Collectors.toList()) → Stream.toList()  (Java 16)
  - DebtInstrumentService (×2 call sites — bond list + bond history map)
  - JwtRoleConverter (the GrantedAuthority pipeline). Needed an explicit
    `(GrantedAuthority)` cast on the map step because Stream.toList()
    infers from the element type and the SimpleGrantedAuthority subtype
    was making the return List<SimpleGrantedAuthority>. The cast keeps
    the @Override signature honest. java.util.stream.Collectors and
    java.util.List imports dropped.

Math.min(hi, Math.max(lo, x)) → Math.clamp(x, lo, hi)  (Java 21)
  - NotificationController.list: `(int) Math.clamp((long) limit, 1, 100)`
    — the int overload would have done, but Math.clamp(int,int,int)
    doesn't exist in Java 21; only (long,int,int) and (double,...).
  - AlertView.computeProgress: the PRICE_ABOVE and PRICE_BELOW progress
    formulas were clamped to [0, 100]. Now they read top-down.

instanceof <Type> → instanceof <Type> name  (Java 16 pattern matching)
  - JwtRoleConverter.extractRolesFromClaim: Collection / String binds
  - JwtRoleConverter.extractRolesFromRealmAccess: Map / Collection / String
  Removes the parallel `(Cast)` line that came right after each
  instanceof check. Wildcard generics (Collection<?>, Map<?,?>) keep
  the @SuppressWarnings("unchecked") justified only at the inner cast
  point where Sonar can already see the rationale.

replaceAll → replace where the pattern is literal  (perf + clarity)
  - NewsService.stripCdata: "<![CDATA[" an